--- a/pages/test.html
+++ b/pages/test.html
@@ -27,7 +27,7 @@
               <ul>
                 <li>
                   <div class="nav--icon"><i class="bi bi-house"></i></div>
-                  <a href="../main.html">Dashboard</a>
+                  <a href="../index.html">Dashboard</a>
                 </li>
                 <li>
                   <div class="nav--icon"><i class="bi bi-chat"></i></div>
@@ -35,7 +35,7 @@
                 </li>
                 <li>
                   <div class="nav--icon"><i class="bi bi-people"></i></div>
-                  <span>Users</span>
+                  <a href="#">Users</a>
                 </li>
               </ul>
             </div>
@@ -51,7 +51,7 @@
                 <div class="nav--icon">
                   <i class="bi bi-box-arrow-left"></i>
                 </div>
-                <span>Logout</span>
+                <a href="#">Logout</a>
               </li>
             </ul>
           </div>
