--- a/pages/adminPanel.html
+++ b/pages/adminPanel.html
@@ -44,7 +44,7 @@
                 </li>
                 <li>
                   <div class="nav--icon"><i class="bi bi-people"></i></div>
-                  <span>Users</span>
+                  <a href="#">Users</a>
                 </li>
               </ul>
             </div>
@@ -60,7 +60,7 @@
                 <div class="nav--icon">
                   <i class="bi bi-box-arrow-left"></i>
                 </div>
-                <span>Logout</span>
+                <a href="#">Logout</a>
               </li>
             </ul>
           </div>
@@ -114,7 +114,7 @@
             </div>
 
             <form>
-              <label for="user--question">Savol nomi</label>
+              <label for="user--question" class="add--label">Savol nomi</label>
               <input
                 type="text"
                 id="user--question"
@@ -125,14 +125,22 @@
                 <li>
                   <input type="radio" name="add" id="new--question" />
                   <label for="new--question">
-                    <input type="text" placeholder="Javobingizni kiriting" />
+                    <input
+                      type="text"
+                      class="question--list__input"
+                      placeholder="Javobingizni kiriting"
+                    />
                     <i class="bi bi-x"></i>
                   </label>
                 </li>
                 <li>
                   <input type="radio" name="add" id="new--question2" />
                   <label for="new--question2">
-                    <input type="text" placeholder="Javobingizni kiriting" />
+                    <input
+                      type="text"
+                      class="question--list__input"
+                      placeholder="Javobingizni kiriting"
+                    />
                     <i class="bi bi-x"></i>
                   </label>
                 </li>
