--- a/pages/result.html
+++ b/pages/result.html
@@ -27,7 +27,7 @@
               <ul>
                 <li>
                   <div class="nav--icon"><i class="bi bi-house"></i></div>
-                  <a href="../main.html">Dashboard</a>
+                  <a href="../index.html">Dashboard</a>
                 </li>
                 <li>
                   <div class="nav--icon"><i class="bi bi-chat"></i></div>
