--- a/pages/result.html
+++ b/pages/result.html
@@ -27,7 +27,7 @@
               <ul>
                 <li>
                   <div class="nav--icon"><i class="bi bi-house"></i></div>
-                  <a href="../index.html">Dashboard</a>
+                  <a href="./main.html">Dashboard</a>
                 </li>
                 <li>
                   <div class="nav--icon"><i class="bi bi-chat"></i></div>
@@ -66,30 +66,6 @@
           </div>
         </div>
         <!-- end of rigth--side__top -->
-        <div class="test--result">
-          <div class="result--chard">
-            <div class="chard--inside">
-              <div class="big--circle"></div>
-              <div class="normal--circle"></div>
-              <div class="blue--circle"></div>
-              <div class="small--circle"></div>
-            </div>
-          </div>
-          <h3>Muvaffaqiyatli yakunlandi</h3>
-          <table>
-            <tr>
-              <td><span>To‘g‘ri javoblar soni</span></td>
-              <td><span>Noto‘g‘ri javoblar soni</span></td>
-            </tr>
-            <tr>
-              <td><h4>12 ta</h4></td>
-              <td><h4>8 ta</h4></td>
-            </tr>
-          </table>
-          <button class="restart--btn">
-            <a href="../index.html">Asosiyga qaytish</a>
-          </button>
-        </div>
       </section>
       <!--  end of rightSide  -->
     </section>
