--- a/pages/adminPanel.html
+++ b/pages/adminPanel.html
@@ -17,6 +17,7 @@
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
     <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="./admin.css" />
 
     <title>Add test</title>
   </head>
@@ -27,24 +28,33 @@
       <section class="dashbord">
         <nav class="navbar">
           <div class="navbar--top">
-            <div class="navbar--logo">
+            <a href="#" class="navbar--logo">
               <img src="../assets/img/logo.png" alt="logo" />
               <h2>clever</h2>
-            </div>
+            </a>
             <!-- end of navbar--logo  -->
             <div class="navbar--list">
               <ul>
-                <li>
-                  <div class="nav--icon"><i class="bi bi-house"></i></div>
-                  <a href="../index.html">Dashboard</a>
+                <li class="navbar--li">
+                  <a href="../main.html">
+                    <span class="nav--icon"><i class="bi bi-house"></i></span>
+                    Dashboard</a
+                  >
+                  <span class="active--span"></span>
                 </li>
-                <li>
-                  <div class="nav--icon"><i class="bi bi-chat"></i></div>
-                  <a href="./test.html">Test CRUD</a>
+                <li class="navbar--li">
+                  <a href="./test.html">
+                    <span class="nav--icon"><i class="bi bi-chat"></i></span>
+                    Test CRUD</a
+                  >
+                  <span class="active--span"></span>
                 </li>
-                <li>
-                  <div class="nav--icon"><i class="bi bi-people"></i></div>
-                  <a href="#">Users</a>
+                <li class="navbar--li">
+                  <a href="#">
+                    <span class="nav--icon"><i class="bi bi-people"></i></span>
+                    Users</a
+                  >
+                  <span class="active--span"></span>
                 </li>
               </ul>
             </div>
@@ -52,15 +62,22 @@
           <!--   END OF TOP-NAVBAR  -->
           <div class="navbar--bottom">
             <ul>
-              <li>
-                <div class="nav--icon"><i class="bi bi-person"></i></div>
-                <a href="#">Account</a>
+              <li class="navbar--li">
+                <a href="./userProfile.html">
+                  <span class="nav--icon"><i class="bi bi-person"></i></span>
+                  Account</a
+                >
+                <span class="active--span1"></span>
               </li>
-              <li>
-                <div class="nav--icon">
-                  <i class="bi bi-box-arrow-left"></i>
-                </div>
-                <a href="#">Logout</a>
+              <li class="navbar--li">
+                <a href="#">
+                  <span class="nav--icon">
+                    <i class="bi bi-box-arrow-left"></i>
+                  </span>
+
+                  Logout</a
+                >
+                <span class="active--span1"></span>
               </li>
             </ul>
           </div>
@@ -72,17 +89,23 @@
         <div class="right--side__top">
           <div class="flex">
             <h1 class="head--flex">
-              <ion-icon name="chevron-back-outline"></ion-icon>
+              <button class="head--flex__btn">
+                <ion-icon name="chevron-back-outline"></ion-icon>
+              </button>
               <span>Create new test</span>
             </h1>
             <div class="test--create__buttons">
               <button class="show--test create--test__btn">
-                <i class="bi bi-eye"></i>
-                <span>Testni oldindan ko‘rish</span>
+                <a href="#">
+                  <i class="bi bi-eye"></i>
+                  <span>Testni oldindan ko‘rish</span>
+                </a>
               </button>
               <button class="save--test create--test__btn">
-                <img src="../assets/img/save.png" alt="save" />
-                <span>Save</span>
+                <a href="#">
+                  <img src="../assets/img/save.png" alt="save" />
+                  <span>Save</span>
+                </a>
               </button>
             </div>
           </div>
@@ -106,20 +129,48 @@
             <div class="flex">
               <h3>Bir nechta variant tanlanuvchi savol</h3>
               <div class="add--body__btns">
-                <button>
+                <button class="add-body--btn">
                   <i class="bi bi-plus"></i><span>Yana qo'shish</span>
                 </button>
-                <button><i class="bi bi-trash3"></i></button>
+                <button id="delete--values">
+                  <i class="bi bi-trash3"></i>
+                </button>
               </div>
             </div>
 
             <form>
-              <label for="user--question" class="add--label">Savol nomi</label>
-              <input
-                type="text"
-                id="user--question"
-                placeholder="Savol nomini kiriting"
-              />
+              <ul>
+                <li>
+                  <label
+                    for="question--subject"
+                    class="question--subject--label add--label"
+                    >Dasturlash tilini tanlang</label
+                  >
+                  <select name="sublect" id="question--subject">
+                    <option value="js" selected>JavaScript</option>
+                    <option value="py">Python</option>
+                    <option value="cpp">C++</option>
+                    <option value="ja">Java</option>
+                    <option value="fl">Flutter</option>
+                    <option value="node">Node Js</option>
+                  </select>
+                </li>
+                <li>
+                  <label for="user--question" class="add--label"
+                    >Savol nomi</label
+                  >
+                  <input
+                    type="text"
+                    id="user--question"
+                    placeholder="Savol nomini kiriting"
+                    autocomplete="off"
+                  />
+                  <span
+                    class="user--question--validation admin--validation"
+                  ></span>
+                </li>
+              </ul>
+
               <ul class="add--question--list">
                 <li>Variantlar</li>
                 <li>
@@ -128,9 +179,16 @@
                     <input
                       type="text"
                       class="question--list__input"
-                      placeholder="Javobingizni kiriting"
+                      id="question1"
+                      placeholder="Javobni kiriting"
+                      autocomplete="off"
                     />
-                    <i class="bi bi-x"></i>
+                    <span
+                      class="question1--validation admin--validation"
+                    ></span>
+                    <!-- <button class="question--clear">
+                      <i class="bi bi-x"></i>
+                    </button> -->
                   </label>
                 </li>
                 <li>
@@ -139,18 +197,91 @@
                     <input
                       type="text"
                       class="question--list__input"
-                      placeholder="Javobingizni kiriting"
+                      placeholder="Javobni kiriting"
+                      id="question2"
+                      autocomplete="off"
                     />
-                    <i class="bi bi-x"></i>
+                    <span
+                      class="question2--validation admin--validation"
+                    ></span>
+                    <!-- <button class="question--clear">
+                      <i class="bi bi-x"></i>
+                    </button> -->
+                  </label>
+                </li>
+                <li>
+                  <input type="radio" name="add" id="new--question2" />
+                  <label for="new--question2">
+                    <input
+                      type="text"
+                      class="question--list__input"
+                      placeholder="Javobni  kiriting"
+                      id="question3"
+                      autocomplete="off"
+                    />
+                    <span
+                      class="question3--validation admin--validation"
+                    ></span>
+                    <!-- <button class="question--clear">
+                      <i class="bi bi-x"></i>
+                    </button> -->
+                  </label>
+                </li>
+                <li>
+                  <input type="radio" name="add" id="new--question2" />
+                  <label for="new--question2" style="position: relative">
+                    <input
+                      type="number"
+                      class="question--list__input"
+                      placeholder="To'g'ri javobni tartib raqamini kiriting   e.x (1,2...)"
+                      id="right--answer"
+                      autocomplete="off"
+                    />
+                    <!-- <button class="question--clear">
+                      <i class="bi bi-x"></i>
+                    </button> -->
+                    <span
+                      class="question4--validation admin--validation"
+                    ></span>
                   </label>
                 </li>
               </ul>
             </form>
           </div>
         </div>
+
         <!-- end of add--test  -->
       </section>
+      <div class="admin--modal">
+        <p>
+          JavaScript dasturlash tiliga <b class="js--lang">0</b> ta savol
+          qo'shildi
+        </p>
+        <p>
+          Python dasturlash tiliga <b class="py--lang">0</b> ta savol qo'shildi
+        </p>
+        <p>
+          C++ dasturlash tiliga <b class="cpp--lang">0</b> ta savol qo'shildi
+        </p>
+        <p>
+          Java dasturlash tiliga <b class="ja--lang">0</b> ta savol qo'shildi
+        </p>
+        <p>
+          Flutter dasturlash tiliga <b class="fl--lang">0</b> ta savol qo'shildi
+        </p>
+        <p>
+          Node JS dasturlash tiliga <b class="node--lang">0</b> ta savol
+          qo'shildi
+        </p>
+
+        <form class="admin--btns">
+          <button class="admin--cancel" type="submit">Cancel</button>
+          <button class="admin--save">Save</button>
+        </form>
+      </div>
+      <div class="admin--overlay"></div>
       <!--  end of rightSide  -->
     </section>
+    <script src="./adminPanel.js"></script>
   </body>
 </html>
