--- a/pages/cpp.html
+++ b/pages/cpp.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css"
     />
-    <title>Test Page</title>
+    <title>Java test</title>
   </head>
   <body>
     <section class="main--section">
@@ -77,7 +77,7 @@
         <!-- RIGHT--SIDE TOP -->
         <div class="right--side__top">
           <div class="flex">
-            <h1>JavaScript dasturlash tili boyicha testlar</h1>
+            <h1>Java dasturlash tili boyicha testlar</h1>
             <div class="test--time">
               <div class="time--icon">
                 <i class="bi bi-clock"></i>
@@ -95,7 +95,9 @@
           <span class="test--warm"> Bitta javobni tanlashingiz mumkin</span>
 
           <div class="test--render__list">
-            <h3 class="question--title"></h3>
+            <h3 class="question--title">
+              Najot Ta’lim’ga qachon va qayerda, kim tomonidan asos solingan?
+            </h3>
             <ul id="test--list">
               <li class="test--list--li">
                 <input
@@ -105,7 +107,9 @@
                   id="one"
                   class="target--element"
                 />
-                <label for="one" id="label--one" class="label"></label>
+                <label for="one" id="label--one" class="label"
+                  >1991-yil, 1-sentyabr. Abdurahmon Poziljonov</label
+                >
               </li>
               <li>
                 <input
@@ -115,7 +119,9 @@
                   id="two"
                   class="target--element"
                 />
-                <label for="two" id="label--two" class="label"></label>
+                <label for="two" id="label--two" class="label"
+                  >2004-yil, 15-yanvar. Shohrux Bakhtiyarov</label
+                >
               </li>
               <li>
                 <input
@@ -125,7 +131,9 @@
                   id="three"
                   class="target--element"
                 />
-                <label for="three" id="label--three" class="label"></label>
+                <label for="three" id="label--three" class="label"
+                  >2001-yil, 30-fevral. Jasurbek Pulatov</label
+                >
               </li>
             </ul>
             <span class="test--line"></span>
@@ -171,6 +179,6 @@
       </div>
       <div class="overlay"></div>
     </section>
-    <script src="./test.js"></script>
+    <script src="./cpp.js"></script>
   </body>
 </html>
