--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <section class="register">
-      <div class="register--head">
+      <a href="#" class="register--head">
         <img src="./assets/img/logo.png" alt="logo" />
         <h2>clever</h2>
-      </div>
+      </a>
       <form class="register--form">
         <h2>Create your account</h2>
         <small class="register--small">It’s free and easy</small>
@@ -28,7 +28,7 @@
             <span class="error1"></span>
           </li>
           <li>
-            <label for="user--email" class="register--label">E - mail</label>
+            <label for="user--email" class="register--label">E-mail</label>
             <input
               type="email"
               class="register--input"
