set information to localStorage

--- a/main.html
+++ b/main.html
@@ -187,19 +187,21 @@
 <!--  Begin applicants list  -->
 
 
-
-<section class="applicants--section tabContent" id="applicantList">
+<section class="applicants--section tabContent none"  id="applicantList">
+  <section class="applicants--wrapp">
     <ul class="applicant--level">
         <li><b>USER</b></li>
         <li><b>RESULT</b></li>
         <li><b>MODIFIED</b></li>
         <li ><b>SUBJECT</b></li>
     </ul>
-    <div class="applicant--list">
+   
       
-    </div>
+   
    
 </section>
+</section>
+
 
 <!-- end of applicants list  -->
 
