--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </li>
           <li>
             <button type="submit" class="register--button">
-              <a href="./main.html"> Register</a>
+              <a href="#" class="route"> Register</a>
             </button>
           </li>
         </ul>
